# ai-rust-api

./: .gitignore  AddingAzure.txt  CLAUDE.md  README.md  start.sh
services/AuthAPI/: Cargo.toml  README.md
services/AuthAPI/src/: auth.rs  config.rs  database.rs  error.rs  handlers.rs  main.rs  models.rs
services/AzureAPI/: .env.example  Cargo.toml  README.md
services/AzureAPI/src/: auth_client.rs  azure_client.rs  config.rs  error.rs  handlers.rs  main.rs
services/BedrockAPI/: Bedrock_Chat_API.postman_collection.json  Cargo.toml  README.md  swagger.yaml
services/BedrockAPI/src/: auth.rs  auth_client.rs  error.rs  main.rs
services/Database/: README.md  add_backend_configs.sql  backup.sh  docker-compose.yml  init.sql  sample_data.sql  setup.sh
services/RAGAPI/: Cargo.toml  README.md  store_document.sql  test_build.sh
services/RAGAPI/migrations/: 001_initial.sql
services/RAGAPI/scripts/: vectorize.py
services/RAGAPI/src/: auth_client.rs  bedrock_client.rs  config.rs  database.rs  embeddings.rs  handlers.rs  main.rs  rag.rs
services/RAGAPI/src/backends/: aws_backend.rs  azure_backend.rs  backend_manager.rs  mod.rs
services/UIConfigAPI/: Cargo.toml  README.md
services/UIConfigAPI/src/: config.rs  database.rs  env_manager.rs  main.rs
services/UIConfigAPI/src/handlers/: admin.rs  auth.rs  backends.rs  config.rs  documents.rs  mod.rs  rag_models.rs  vector_processing.rs  vectors.rs
services/UIConfigAPI/src/middleware/: auth.rs
services/UIConfigAPI/src/models/: config.rs  document.rs  mod.rs  rag_model.rs  user.rs  vector.rs
services/UIConfigAPI/src/utils/: encryption.rs  file_utils.rs  mod.rs
useragent/: README.md  package-lock.json  package.json
useragent/public/api-docs/: AI-Rust-API.postman_collection.json
useragent/src/: App.js
useragent/src/components/: AdminDashboard.js  ApiDocumentation.js  Login.js  Register.js  UserDashboard.js
useragent/src/components/admin/: AdminDashboard.js  AdminOverview.js  ConfigManagement.js  ConfigurationManagement.js  DocumentManagement.js  EnvConfigurationManagement.js  RagModelManagement.js  UserManagement.js  VectorManagement.js
useragent/src/context/: AuthContext.js
useragent/src/services/: adminService.js  authService.js
