[package]
name = "ui-config-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
validator = { version = "0.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio-util = { version = "0.7", features = ["io"] }
multer = "3.1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
mime_guess = "2.0"
regex = "1.10"
pdf-extract = "0.7"